--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -1,25 +1,30 @@
 .main {
     justify-content: space-evenly;
-    background-color: rgb(137, 181, 167);
-    
-   
-    
+    background-color: rgb(137, 181, 167);}
 
-}
 .container{
     display: flex;
-    padding: 0 120px;
-    
-
-}
+    padding: 0 120px;}
 
 .sections {
     padding: 20px;
     height: 100%;
     width: 100%;
-
 }
 
+input{
+    height: 30px;
+    border-radius: 5px 0 0 5px ;
+    border: 1px solid rgb(106, 98, 98);
+    border-right: none solid white;
+}
+.signup-btn{
+    height: 29.5px;
+    border-radius: 0  5px 5px 0 ;
+    border: 1px solid rgb(106, 98, 98);
+    border-left: none solid white;
+    background-color: burlywood;
+}
 li {
     list-style-type: none;
     
@@ -29,6 +34,20 @@ li {
 .footer-el {
     text-decoration: none;
     color: black;
+}
+
+.footer-end{
+    
+    height: 50px;
+    width: 100%;
+    border: 1px solid white;
+    background-color: rgb(137, 181, 167);
+    color: black;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
 }
 @media only screen and (max-width: 600px) {
    
